--- a/maQx/Views/AccessLevel/Index.cshtml
+++ b/maQx/Views/AccessLevel/Index.cshtml
@@ -18,13 +18,10 @@
                             @Html.DropDownListFor(model => model.User, Model.Users, htmlAttributes: new { ng_model = "dCtrl.user", ng_disabled = "dCtrl.proto.isLoading()", ng_change = "dCtrl.proto.change()" })
                         </div>
                     </div>
-
                     <div class="pull-right">
                         <label><span class="input-group-addon addon-icon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span><input type="search" class="form-control input-sm" placeholder="Search" aria-controls="DataTables_Table_0" ng-model="search"></label>
                     </div>
-
                 }
-
             </div>
         </div>
         <div>
@@ -32,44 +29,42 @@
             {
                 <div ng-show="dCtrl.proto.showWarning()" class="alert alert-warning" role="alert"><i class="fa fa-exclamation-triangle"></i> Please select a user from the list</div>
                 <div class="department-menu-layer">
-
-                    <div class="circle-loader" ng-show="dCtrl.proto.isLoading()">
-                        <div class="loader-animate"></div>
-                        <div><h3>Loading..</h3></div>
-                    </div>
-
                     <div class="css-fade" ng-show="dCtrl.proto.showContent()">
                         <tabset class="tab-animation">
                             <tab>
                                 <tab-heading>
                                     <span class="fa fa-pie-chart"></span> Dashboard Access
                                 </tab-heading>
-
                                 <div class="access-layout">
                                     <div class="transparent-loader" ng-show="dCtrl.proto.isTransparentLoading()"></div>
-
-                                    <div ng-repeat="item in dCtrl.userList | select:dCtrl.user:'Id':'0' track by item.Id">
-                                        <accordion close-others="false">
-                                            <accordion-group ng-repeat="plant in item.plantList | filter:search | orderBy:Name track by plant.Key" is-open="plant.open">
-                                                <accordion-heading>
-                                                    <div class="panel-heading-state">
-                                                        <input ng-model="plant.selected" indeterminate-checkbox="plant.indeterminate" ng-click="dCtrl.proto.openTab(plant)" id="{{plant.Key}}" type="checkbox" />
-                                                        <label for="{{plant.Key}}" ng-bind="plant.Name"></label>
+                                    <div class="circle-loader" ng-show="dCtrl.proto.isPlantLoading()">
+                                        <div class="loader-animate"></div>
+                                        <div><h3>Loading..</h3></div>
+                                    </div>
+                                    <div ng-show="dCtrl.proto.showPlantContent()">
+                                        <div ng-repeat="item in dCtrl.userList | select:dCtrl.user:'Id':'0' track by item.Id">
+                                            <accordion close-others="false">
+                                                <accordion-group ng-repeat="plant in item.plantList | filter:search | orderBy:Name track by plant.Key" is-open="plant.open">
+                                                    <accordion-heading>
+                                                        <div class="panel-heading-state">
+                                                            <input ng-model="plant.selected" indeterminate-checkbox="plant.indeterminate" ng-click="dCtrl.proto.openTab(plant)" id="{{plant.Key}}" type="checkbox" />
+                                                            <label for="{{plant.Key}}" ng-bind="plant.Name"></label>
+                                                        </div>
+                                                        <div class="panel-heading-wrapper" ng-click="dCtrl.proto.toggleOpen(plant)">
+                                                            <span class="pull-right fa fa-chevron-right" ng-class="dCtrl.proto.getIcon(plant)"></span>
+                                                        </div>
+                                                    </accordion-heading>
+                                                    <div class="panel-body-wrapper">
+                                                        <ul>
+                                                            <li ng-repeat="division in plant.divisionList | filter:search | orderBy:Name track by division.Key">
+                                                                <input ng-model="division.selected" ng-click="dCtrl.proto.selectTab(plant)" id="{{division.Key}}" type="checkbox" />
+                                                                <label for="{{division.Key}}" ng-bind="division.Name"></label>
+                                                            </li>
+                                                        </ul>
                                                     </div>
-                                                    <div class="panel-heading-wrapper" ng-click="dCtrl.proto.toggleOpen(plant)">
-                                                        <span class="pull-right fa fa-chevron-right" ng-class="dCtrl.proto.getIcon(plant)"></span>
-                                                    </div>
-                                                </accordion-heading>
-                                                <div class="panel-body-wrapper">
-                                                    <ul>
-                                                        <li ng-repeat="division in plant.divisionList | filter:search | orderBy:Name track by division.Key">
-                                                            <input ng-model="division.selected" ng-click="dCtrl.proto.selectTab(plant)" id="{{division.Key}}" type="checkbox" />
-                                                            <label for="{{division.Key}}" ng-bind="division.Name"></label>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </accordion-group>
-                                        </accordion>
+                                                </accordion-group>
+                                            </accordion>
+                                        </div>
                                     </div>
                                 </div>
                             </tab>
@@ -78,7 +73,24 @@
                                     <span class="fa fa-bars"></span> Menu Access
                                 </tab-heading>
                                 <div class="access-layout">
-                                    <div> Menu Access</div>
+                                    <div class="transparent-loader" ng-show="dCtrl.proto.isTransparentLoading()"></div>
+                                    <div class="circle-loader" ng-show="dCtrl.proto.isMenuLoading()">
+                                        <div class="loader-animate"></div>
+                                        <div><h3>Loading..</h3></div>
+                                    </div>
+                                    <div ng-show="dCtrl.proto.showMenuContent()">
+                                        <div ng-repeat="item in dCtrl.userList | select:dCtrl.user:'Id':'0' track by item.Id">
+                                            <div class="menu-access">
+                                                <h3 ng-bind="item.department.Name"></h3>
+                                                <ul>
+                                                    <li ng-repeat="menu in item.menuList | filter:search | orderBy:Name track by menu.ID">
+                                                        <input ng-model="menu.selected" ng-click="dCtrl.proto.openMenu(menu)" id="{{menu.ID}}" type="checkbox" />
+                                                        <label for="{{menu.ID}}" ng-bind="menu.Name"></label>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </tab>
                         </tabset>
