Fixes JSHint - Trailings WhiteSpace - Typos errors

--- a/maQx/Views/AccessLevel/Index.cshtml
+++ b/maQx/Views/AccessLevel/Index.cshtml
@@ -104,7 +104,7 @@
                         <span class="fa-stack title-icon yellow">
                             <i class="fa fa-square-o fa-stack-2x"></i>
                             <i class="fa fa-info fa-stack-1x"></i>
-                        </span> No registered users avaiable.
+                        </span> No registered users available.
                     </h3>
                     <p>
                         Only registered users allowed to access dashboards. @Html.ActionLink("Invite new users", "Create", "Invites") to proceed further.
