--- a/maQx/Views/App/Init.cshtml
+++ b/maQx/Views/App/Init.cshtml
@@ -44,7 +44,7 @@
         else
         {
             <div>
-                <h1>Opps! Something went worng here.</h1>
+                <h1>Opps! Something went wrong here.</h1>
             </div>
         }
     </div>
