--- a/maQx/Views/App/Login.cshtml
+++ b/maQx/Views/App/Login.cshtml
@@ -54,7 +54,7 @@
     </div>
 
     <footer>
-        <div>&copy; 2014 - 2015 IP Rings Ltd. All rigts reserved.</div>
+        <div>&copy; 2014 - 2015 IP Rings Ltd. All rights reserved.</div>
     </footer>
 
 </div>
