--- a/maQx/Views/App/_AdminRegisterPartial.cshtml
+++ b/maQx/Views/App/_AdminRegisterPartial.cshtml
@@ -7,12 +7,11 @@
         @using (Html.BeginForm("Register", "App"))
         {
             @Html.AntiForgeryToken()
-          
 
             <div class="admin-form">
                 <h1>Complete your profile</h1>
 
-                <p>Profile informations used by the application to enchance user experience and also for lateral communications.</p>
+                <p>Profile informations used by the application to enhance user experience and also for lateral communications.</p>
 
                 <div class="admin-form-layout">
 
