--- a/maQx/Views/App/_SetEmailConfrimPartial.cshtml
+++ b/maQx/Views/App/_SetEmailConfrimPartial.cshtml
@@ -38,7 +38,7 @@
         </div>
 
         <p>
-           If you want to receive a new confirmation code or like to change your email address, please enter your new email adderss and click Resend Code to send a new confrimation code.
+           If you want to receive a new confirmation code or like to change your email address, please enter your new email address and click Resend Code to send a new confirmation code.
         </p>
 
         <div>
