--- a/maQx/Views/RawMaterials/Index.cshtml
+++ b/maQx/Views/RawMaterials/Index.cshtml
@@ -11,7 +11,7 @@
                     return $resource('get/RawMaterials').get();
                 },
                 init: function () {
-                    return [{ a: 'Code', b: 'Code' }, { a: 'Description', b: 'Description' }, { a: 'Unit', b: 'Unit' }, { a: 'Measurement', b: 'Measurement' }, { a: 'Modified', b: 'Modified' }];
+                    return [{ a: 'Code', b: 'Code' }, { a: 'Description', b: 'Description' }, { a: 'UnitName', b: 'Unit Of Measure' }, { a: 'MeasurementName', b: 'Measurement Type' }, { a: 'Modified', b: 'Modified' }];
                 }
             }
         }]);
