--- a/maQx/Views/Products/Edit.cshtml
+++ b/maQx/Views/Products/Edit.cshtml
@@ -9,7 +9,7 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.Key)
+        @Html.HiddenFor(model => model.Key, htmlAttributes: new { @readonly = "readonly" })
 
         <div class="admin-form">
             <h1>Edit details</h1>
