--- a/maQx/Views/AccessLevel/Index.cshtml
+++ b/maQx/Views/AccessLevel/Index.cshtml
@@ -3,7 +3,6 @@
     Layout = "~/Views/Shared/_FramePage.cshtml";
 }
 
-
 <div class="app-generic-template detail-template">
     <div class="modular-layout" ng-controller="AccessLevelsController as dCtrl">
         <div class="css-fade">
@@ -29,7 +28,7 @@
             {
                 <div ng-show="dCtrl.proto.showWarning()" class="alert alert-warning" role="alert"><i class="fa fa-exclamation-triangle"></i> Please select a user from the list</div>
                 <div class="department-menu-layer">
-                    <div class="css-fade" ng-show="dCtrl.proto.showContent()">
+                    <div class="css-fade" ng-show="dCtrl.proto.showTabContent()">
                         <tabset class="tab-animation">
                             <tab>
                                 <tab-heading>
@@ -37,14 +36,14 @@
                                 </tab-heading>
                                 <div class="access-layout">
                                     <div class="transparent-loader" ng-show="dCtrl.proto.isTransparentLoading()"></div>
-                                    <div class="circle-loader" ng-show="dCtrl.proto.isPlantLoading()">
+                                    <div class="circle-loader" ng-show="dCtrl.proto.isContentLoading()">
                                         <div class="loader-animate"></div>
                                         <div><h3>Loading..</h3></div>
                                     </div>
-                                    <div ng-show="dCtrl.proto.showPlantContent()">
+                                    <div ng-show="dCtrl.proto.showContent()">
                                         <div ng-repeat="item in dCtrl.userList | select:dCtrl.user:'Id':'0' track by item.Id">
                                             <accordion close-others="false">
-                                                <accordion-group ng-repeat="plant in item.plantList | filter:search | orderBy:Name track by plant.Key" is-open="plant.open">
+                                                <accordion-group ng-repeat="plant in item.plantList | filter:search | orderBy:'Name' track by plant.Key" is-open="plant.open">
                                                     <accordion-heading>
                                                         <div class="panel-heading-state">
                                                             <input ng-model="plant.selected" indeterminate-checkbox="plant.indeterminate" ng-click="dCtrl.proto.openTab(plant)" id="{{plant.Key}}" type="checkbox" />
@@ -56,7 +55,7 @@
                                                     </accordion-heading>
                                                     <div class="panel-body-wrapper">
                                                         <ul>
-                                                            <li ng-repeat="division in plant.divisionList | filter:search | orderBy:Name track by division.Key">
+                                                            <li ng-repeat="division in plant.divisionList | filter:search | orderBy:'Name' track by division.Key">
                                                                 <input ng-model="division.selected" ng-click="dCtrl.proto.selectTab(plant)" id="{{division.Key}}" type="checkbox" />
                                                                 <label for="{{division.Key}}" ng-bind="division.Name"></label>
                                                             </li>
@@ -74,18 +73,43 @@
                                 </tab-heading>
                                 <div class="access-layout">
                                     <div class="transparent-loader" ng-show="dCtrl.proto.isTransparentLoading()"></div>
-                                    <div class="circle-loader" ng-show="dCtrl.proto.isMenuLoading()">
+                                    <div class="circle-loader" ng-show="dCtrl.proto.isContentLoading()">
                                         <div class="loader-animate"></div>
                                         <div><h3>Loading..</h3></div>
                                     </div>
-                                    <div ng-show="dCtrl.proto.showMenuContent()">
+                                    <div ng-show="dCtrl.proto.showContent()">
                                         <div ng-repeat="item in dCtrl.userList | select:dCtrl.user:'Id':'0' track by item.Id">
                                             <div class="menu-access">
                                                 <h3 ng-bind="item.department.Name"></h3>
                                                 <ul>
-                                                    <li ng-repeat="menu in item.menuList | filter:search | orderBy:Name track by menu.ID">
+                                                    <li ng-repeat="menu in item.menuList | filter:search | orderBy:'Name' track by menu.ID">
                                                         <input ng-model="menu.selected" ng-click="dCtrl.proto.openMenu(menu)" id="{{menu.ID}}" type="checkbox" />
                                                         <label for="{{menu.ID}}" ng-bind="menu.Name"></label>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </tab>
+                            <tab>
+                                <tab-heading>
+                                    <span class="fa fa-gear"></span> Action Access
+                                </tab-heading>
+                                <div class="access-layout">
+                                    <div class="transparent-loader" ng-show="dCtrl.proto.isTransparentLoading()"></div>
+                                    <div class="circle-loader" ng-show="dCtrl.proto.isContentLoading()">
+                                        <div class="loader-animate"></div>
+                                        <div><h3>Loading..</h3></div>
+                                    </div>
+                                    <div ng-show="dCtrl.proto.showContent()">
+                                        <div ng-repeat="item in dCtrl.userList | select:dCtrl.user:'Id':'0' track by item.Id">
+                                            <div class="menu-access">
+                                                <h3>User Roles</h3>
+                                                <ul>
+                                                    <li ng-repeat="role in item.roleList | filter:search track by role.Role">
+                                                        <input ng-model="role.selected" ng-click="dCtrl.proto.openRole(role)" id="{{role.Role}}" type="checkbox" />
+                                                        <label for="{{role.Role}}" ng-bind="role.Description"></label>
                                                     </li>
                                                 </ul>
                                             </div>
