--- a/maQx/Views/Departments/Index.cshtml
+++ b/maQx/Views/Departments/Index.cshtml
@@ -41,7 +41,7 @@
                             <div><h3>Loading..</h3></div>
                         </div>
                         <ul class="material-list-view css-fade pull-control" ng-show="dCtrl.proto.isLoaded()">
-                            <li ng-repeat="division in dCtrl.divisionList | select:dCtrl.division:'division.Key':'0' | filter:search | orderBy:division.Name track by division.division.Key">
+                            <li ng-repeat="division in dCtrl.divisionList | select:dCtrl.division:'division.Key':'0' | filter:search | orderBy:'division.Name' track by division.division.Key">
                                 <div>
                                     <span class="fa fa-angle-double-right fa-lg"></span><span class="ui-bold" ng-bind="division.division.Name"></span>
                                 </div>
@@ -49,7 +49,7 @@
                                     <button type="button" ng-click="dCtrl.proto.add(division.division)" class="btn btn-sm app-btn fa-clear"><span class="fa fa-plus"></span></button>
                                 </div>
                                 <ul>
-                                    <li ng-animate="'animate'" ng-repeat="item in division.departmentList | filter:search | orderBy:Name track by item.Key">
+                                    <li ng-animate="'animate'" ng-repeat="item in division.departmentList | filter:search | orderBy:'Name' track by item.Key">
                                         <div>
                                             <span class="fa fa-chevron-right "></span><span ng-bind="item.Name"></span>
                                         </div>
@@ -86,7 +86,7 @@
                         <div class="form-group">
                             <div>
                                 <div>
-                                    <input type="button" value="Create" disable-when="dCtrl.isLoading" ng-click="dCtrl.proto.save()" class="btn btn-default app-btn" />
+                                    <input type="button" value="Create" disable-when="dCtrl.proto.disableStatus()" ng-click="dCtrl.proto.save()" class="btn btn-default app-btn" />
                                 </div>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                         <div class="form-group">
                             <div>
                                 <div>
-                                    <input type="button" value="Edit" disable-when="dCtrl.isLoading" ng-click="dCtrl.proto.update()" class="btn btn-default btn-warning" />
+                                    <input type="button" value="Edit" disable-when="dCtrl.proto.disableStatus()" ng-click="dCtrl.proto.update()" class="btn btn-default btn-warning" />
                                 </div>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
                         <div class="form-group">
                             <div>
                                 <div>
-                                    <input type="button" value="Yes, Delete" disable-when="dCtrl.isLoading" ng-click="dCtrl.proto.remove()" class="btn btn-default btn-danger" />
+                                    <input type="button" value="Yes, Delete" disable-when="dCtrl.proto.disableStatus()" ng-click="dCtrl.proto.remove()" class="btn btn-default btn-danger" />
                                 </div>
                             </div>
                         </div>
